# dmxml

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.bat  build.sh
include/: dmxml.h  pugixml.hpp
src/: netdataex.cpp  pugixml.cpp  xmldata.cpp
test/: dmxmltest.cpp
test/dmxmltest/: dmxmltest.cpp
